welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : String
 required: Char
	var M:Char=litMessage()
                             ^BDRBuggle:4: error: type mismatch;
 found   : String("R")
 required: Char
	if (M="R") {
              ^BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="R") {
             ^BDRBuggle:8: error: type mismatch;
 found   : String("L")
 required: Char
	if (M="L") {
              ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="L") {
             ^BDRBuggle:12: error: type mismatch;
 found   : String("I")
 required: Char
	if (M="I") {
              ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="I") {
             ^BDRBuggle:17: error: type mismatch;
 found   : String("A")
 required: Char
	if (M="A") {
              ^BDRBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="A") {
             ^BDRBuggle:20: error: type mismatch;
 found   : String("B")
 required: Char
	if (M="B") {
              ^BDRBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="B") {
             ^BDRBuggle:24: error: type mismatch;
 found   : String("C")
 required: Char
	if (M="C") {
              ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="C") {
             ^BDRBuggle:29: error: type mismatch;
 found   : String("Z")
 required: Char
	if (M="Z") {
              ^BDRBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="Z") {
             ^BDRBuggle:32: error: type mismatch;
 found   : String("Y")
 required: Char
	if (M="Y") {
              ^BDRBuggle:32: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="Y") {
             ^BDRBuggle:36: error: type mismatch;
 found   : String("W")
 required: Char
	if (M="W") {
              ^BDRBuggle:36: error: type mismatch;
 found   : Unit
 required: Boolean
	if (M="W") {
             ^